DE541:Breaks in care fixes

--- a/casa/public/stylesheets/claimHtmlOutput.css
+++ b/casa/public/stylesheets/claimHtmlOutput.css
@@ -1,7 +1,3 @@
-tr{
-    vertical-align: middle;
-}
-
 td:not(:empty){
     padding-bottom: 3px;
     padding-top: 5px;
